--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         "email": "myemail@example.com"
                     }
                 */
-                //alert("Result: " + JSON.stringify(result));
+                alert("Result: " + JSON.stringify(result));
                 var accessToken = userData.authResponse.accessToken;
                 var ID = result.id;
                 var email = result.email;
@@ -297,6 +297,7 @@
             var password = window.localStorage.getItem("password");
             var deviceId = window.localStorage.getItem("deviceId");
             var result1 = JSON.stringify(data);
+            alert(result1);
             $('.progress-bar-validation').hide();
             if(!data.error) {
                     getDeviceId(deviceId,email,password);
