--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             var password = window.localStorage.getItem("password");
             var deviceId = window.localStorage.getItem("deviceId");
             var result1 = JSON.stringify(data);
-            //alert(result1);
+            alert(result1);
             $('.progress-bar-validation').hide();
             if(!data.error) {
                     getDeviceId(deviceId,email,password);
