--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!--<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=medium-dpi, user-scalable=0" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Kazo.com</title>
+        <title>Purple Stores Demo App</title>
         <link rel="apple-touch-icon" href="icon.png">
     </head>
     <body>   
