--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@
                 if (!validateEmail(email.val())) { alert('Invalid Email Address');email.focus();return;}
                 if(password_r.val() == '' || password_r.val().length <6){alert('Please enter 6 or more characters.');password_r.focus();return;}
                 if(password_r.val() != confirm_password_r.val()){alert('Please make sure your passwords match');confirm_password_r.focus();return;}
-                window.localStorage.setItem("email",email);
-                window.localStorage.setItem("password",password_r);
+                window.localStorage.setItem("email",email.val());
+                window.localStorage.setItem("password",password_r.val());
                 var form = $(formId); 
                 var params = form.serialize();
                 //alert(params);
