--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div> 
                 <div class="loading_mask as_abs" id="load_light">
                     <div class="loading_image">
-                            <img alt="loading your required product" src="img/loading_p.gif">
+                            <!--<img alt="loading your required product" src="img/loading_p.gif">-->
                             <span> Loading... Please wait </span>
                     </div>
                 </div>
