added file in art4u

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=medium-dpi, user-scalable=0" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Purple Stores App</title>
+        <title>Art4u App</title>
         <link rel="apple-touch-icon" href="icon.png">
     </head>
     <body>   
@@ -37,7 +37,7 @@
                   <div class="header-language-container">
                     <div class="header-main-part">
                       <div class="header-main-inner-sects">
-                        Purple Stores
+                        Art4u
                       </div>
                     </div>
                   </div>
@@ -463,7 +463,7 @@
             $('.loader-iframe').css("display", "block");
             $( ".Offline-app-login-window" ).remove();
         
-            var iframeURL = 'http://stores.purplestores.in/store_iphone/autoLogin.php';
+            var iframeURL = 'http://art4u.com';
             var iframeID = 'MyIFrame';
             var password = '12345678';
 
