--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 			var pushNotification;
 			function getDeviceProperty()
 			{
+				alert(JSON.stringify(device));
 			     var deviceOS  = device.platform  ;  //fetch the device operating system
 			     var deviceOSVersion = device.version ;  //fetch the device OS version
 			          alert("Device OS: " + deviceOS);
