--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
 					var app_varsion='1.0.8'
 					var device_os=deviceInfo.platform;
 					var device_varsion=deviceInfo.version;
-					var device_manufacture=deviceInfo.manufacture;
+					var device_manufacture=deviceInfo.manufactuer;
 					var device_model=deviceInfo.model;
-					alert(deviceInfo);
+					
 					alert(app_varsion);
 					alert(device_os);
 					alert(device_varsion);
