--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 						                + currentdate.getSeconds();
 					
 					var deviceInfo=getDeviceProperty();
+					alert(JSON.stringify(deviceInfo));
 					var app_varsion='1.0.8'
 					var device_os=deviceInfo.platform;
 					var device_varsion=deviceInfo.version;
