--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					var app_varsion='1.0.8'
 					var device_os=deviceInfo.platform;
 					var device_varsion=deviceInfo.version;
-					var device_manufacture=deviceInfo.manufactuer;
+					var device_manufacture=deviceInfo.manufacturer;
 					var device_model=deviceInfo.model;
 					alert(app_varsion);
 					alert(device_os);
