--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
 						data : {
 							deviceId : deviceId,
 							device_os :device_os,
-							device_varsion : device_varsion,
+							device_os_varsion : device_varsion,
 							device_manufacture :device_manufacture,
 							device_model : device_model,
-							currentdate : currentdate,
+							currentdate : datetime,
 							app_varsion : app_varsion
 						},
 						cache : false,
