--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
 					console.log(data.message);
 					alert(data.title+" Message: " +data.message+" image: " +data.image);
 				});
+				push.off('notification', function(data) {
+					console.log(data.message);
+					alert(data.title+" Message: " +data.message+" image: " +data.image);
+				});
 				$('.device-ready').hide();
 				$('.loader-div').show();
 			}
