--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 					
 					var deviceId = data.registrationId;
 					setIsNotify(deviceId);
-					window.localStorage.setItem("deviceId", deviceId);
-					isDeviceExistInDB(deviceId);
+					//window.localStorage.setItem("deviceId", deviceId);
+					//isDeviceExistInDB(deviceId);
 					
 					var currentdate = new Date(); 
 					var datetime = currentdate.getFullYear() + "-"
