--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
 				    alert(JSON.stringify(e));
 				});
 				
-				var deviceId_1 = window.localStorage.getItem("deviceId");
+				var deviceId1 = window.localStorage.getItem("deviceId");
 				alert(is_notyfy);
-				alert(deviceId_1);
-				isDeviceExistInDB(deviceId);
+				alert(deviceId1);
+				isDeviceExistInDB(deviceId1);
 				$('.device-ready').hide();
 				$('.loader-div').show();
 			}
